Fixed some alignmnent issues in Movies.scss

--- a/source/components/Movies/Movies.scss
+++ b/source/components/Movies/Movies.scss
@@ -22,7 +22,8 @@ text-align: center;
   background-color:#EEEEEE;
   margin: auto;
   padding-top: 10px;
-  width: 40%;
+  width: 30%;
+  text-align: left;
   .moviePoster {
     left: 0px;
     width: 80px;
